--- a/AssemblyBuddy.Core/AssemblyBuddy.Core.csproj
+++ b/AssemblyBuddy.Core/AssemblyBuddy.Core.csproj
@@ -40,6 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AssemblySynchronizer.cs" />
+    <Compile Include="FileEntry.cs" />
+    <Compile Include="Folder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
