Added file comparison and file system interfaces and partial implementations.

--- a/AssemblyBuddy.Interfaces/AssemblyBuddy.Interfaces.csproj
+++ b/AssemblyBuddy.Interfaces/AssemblyBuddy.Interfaces.csproj
@@ -42,6 +42,9 @@
   <ItemGroup>
     <Compile Include="FileComparisonResult.cs" />
     <Compile Include="FileMatch.cs" />
+    <Compile Include="IFileSystem.cs" />
+    <Compile Include="IFileSystemFile.cs" />
+    <Compile Include="IHashStrategy.cs" />
     <Compile Include="IUpdatedAssemblyFinder.cs" />
     <Compile Include="ICopier.cs" />
     <Compile Include="IFileComparer.cs" />
