--- a/AssemblyBuddy.Core/AssemblyBuddy.Core.csproj
+++ b/AssemblyBuddy.Core/AssemblyBuddy.Core.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileComparer.cs" />
     <Compile Include="FolderComparer.cs" />
     <Compile Include="UpdatedAssemblyFinder.cs" />
     <Compile Include="FileEntry.cs" />
