Added implementations for FileSsytem and FileSystemFile

--- a/AssemblyBuddy.Core/AssemblyBuddy.Core.csproj
+++ b/AssemblyBuddy.Core/AssemblyBuddy.Core.csproj
@@ -42,6 +42,8 @@
   <ItemGroup>
     <Compile Include="DefaultComparisonStrategy.cs" />
     <Compile Include="FileComparer.cs" />
+    <Compile Include="FileSystem.cs" />
+    <Compile Include="FileSystemFile.cs" />
     <Compile Include="FolderComparer.cs" />
     <Compile Include="UpdatedAssemblyFinder.cs" />
     <Compile Include="FileEntry.cs" />
