--- a/AssemblyBuddy.Interfaces/AssemblyBuddy.Interfaces.csproj
+++ b/AssemblyBuddy.Interfaces/AssemblyBuddy.Interfaces.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="FileComparisonResult.cs" />
     <Compile Include="FileMatch.cs" />
+    <Compile Include="FileMatchResult.cs" />
     <Compile Include="IBatchCopier.cs" />
     <Compile Include="IFileSystem.cs" />
     <Compile Include="IFileSystemFile.cs" />
