--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\AssemblyBuddy.Core.Tests\packages.config" />
+  <repository path="..\AssemblyBuddy.Core\packages.config" />
+  <repository path="..\AssemblyBuddy.Plugin.TFS\packages.config" />
   <repository path="..\AssemblyBuddy\packages.config" />
 </repositories>
