--- a/AssemblyBuddy/AssemblyBuddy.csproj
+++ b/AssemblyBuddy/AssemblyBuddy.csproj
@@ -88,6 +88,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="CopyProgressReporter.cs" />
     <Compile Include="DesignTimeData\MockFileEntry.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
