--- a/AssemblyBuddy.Core/AssemblyBuddy.Core.csproj
+++ b/AssemblyBuddy.Core/AssemblyBuddy.Core.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CommandLine">
+      <HintPath>..\packages\CommandLineParser.1.9.71\lib\net40\CommandLine.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Threading.Tasks">
       <HintPath>..\packages\Microsoft.Bcl.Async.1.0.16\lib\net40\Microsoft.Threading.Tasks.dll</HintPath>
     </Reference>
@@ -68,6 +71,7 @@
     <Compile Include="FileSystem.cs" />
     <Compile Include="FileSystemFile.cs" />
     <Compile Include="FolderComparer.cs" />
+    <Compile Include="StartupOptions.cs" />
     <Compile Include="UpdatedAssemblyFinder.cs" />
     <Compile Include="FileEntry.cs" />
     <Compile Include="Folder.cs" />
